--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/csvtojson": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -27,7 +28,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pg": "^8.7.3",
