expand env with csv file name

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -4,6 +4,8 @@ SERVICE_PORT=3000
 SERVICE_NAME=CodeFlex
 SALT=10
 
+CSV_FILE=Programming_Test_2_1.csv
+
 # Database
 POSTGRES_USER=codeflex-dev
 POSTGRES_PASSWORD=
