add currencies and setup cron job

--- a/.docker/.env.docker.dev.example
+++ b/.docker/.env.docker.dev.example
@@ -4,6 +4,10 @@ SERVICE_PORT=3000
 SERVICE_NAME=CodeFlex
 SALT=10
 
+CSV_FILE=Programming_Test_2_1.csv
+GET_CURRENCIES_API_URL=
+CURRENCY_CRON_EXPRESSION=0 1 * * *
+
 # Database
 POSTGRES_USER=codeflex-dev
 POSTGRES_PASSWORD=
