--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/csvtojson": "^2.0.0",
+    "@types/node-cron": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -28,12 +29,14 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node-cron": "^3.0.2",
     "pg": "^8.7.3",
     "typeorm": "0.2.36"
   }
