get all computer parts api

--- a/.docker/.env.docker.dev.example
+++ b/.docker/.env.docker.dev.example
@@ -8,6 +8,11 @@ CSV_FILE=Programming_Test_2_1.csv
 GET_CURRENCIES_API_URL=
 CURRENCY_CRON_EXPRESSION=0 1 * * *
 
+# Pagination
+LIMIT=8
+PAGE=1
+OFFSET=0
+
 # Database
 POSTGRES_USER=codeflex-dev
 POSTGRES_PASSWORD=
