--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.13",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
