--- a/.env.dev.example
+++ b/.env.dev.example
@@ -2,7 +2,10 @@
 NODE_ENV=dev
 SERVICE_PORT=3000
 SERVICE_NAME=CodeFlex
+
+# Security
 SALT=10
+SECRET=
 
 CSV_FILE=Programming_Test_2_1.csv
 GET_CURRENCIES_API_URL=
