--- a/.docker/docker-compose.dev.yml
+++ b/.docker/docker-compose.dev.yml
@@ -11,3 +11,13 @@ services:
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
       - ./db-provision:/docker-entrypoint-initdb.d/
+  app:
+    build:
+      context: ../
+      dockerfile: ./Dockerfile.dev
+    ports:
+      - '3000:3000'
+    env_file:
+      - .env.docker.dev
+    depends_on:
+      - "codelfex-db-dev"
